# My_thesis

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  app.py  dependencies.py  pyproject.toml  requirements.txt
backend/db/: database.py  models.py
backend/models/: arcface.onnx  detection.onnx  emotion.onnx
backend/routers/: __init__.py  common.py  detect.py  emotion.py  enroll.py  health.py  persons.py  pipeline.py  recognize.py
backend/schemas/: common.py
backend/services/: detection.py  embedding.py  emotion_model.py  pipeline.py  storage.py
backend/tests/: test_api.py  test_pipeline.py
backend/utils/: logging.py  metrics.py  postprocessing.py  preprocessing.py
deploy/: .env.example  nginx.conf
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CameraView.tsx  EmotionBar.tsx  EnrollDialog.tsx  LatencyBadge.tsx  Overlay.tsx  PhotoUpload.tsx
frontend/src/pages/: About.tsx  Enroll.tsx  Live.tsx  Photo.tsx
frontend/src/pwa/: service-worker.ts
frontend/src/styles/: global.css
