[tool.poetry]
name = "face-backend"
version = "0.1.0"
description = "FastAPI backend for face detection and emotion recognition"
authors = ["AI Engineer <ai@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^1.10.14"
python-multipart = "^0.0.9"
numpy = "^1.26.0"
opencv-python-headless = "^4.9.0"
onnxruntime = "^1.16.0"
sqlalchemy = "^2.0.20"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
